Changelog for Shake

    Significant changes to defining custom rules
    Delete the deprecated defaultRule
    IMPORTANT: Incompatible on disk format change
    #428, don't persist errors to the database
0.15.9
    Documentation tweaks
    Optimise the thread pool
    Fix progress output through wget
0.15.8
    Extra base bounds to rule out building on GHC 7.4
0.15.7
    Require extra-1.4.8
    #457, better error message when calling need on a directory
    #456, use displayException for inner exceptions
    Improve the documentation for priority/alternative
    #448, fix FSATrace on Mac 10.11
    #444, optimise copyFileChanged
    #58, change writeFile functions to MonadIO
0.15.6
    Require the primitive package
    #431, make it an error to need a directory
    #393, add orderOnlyAction, a general version of orderOnly
    #408, explain that alwaysRerun has no immediate effect
    #410, add --digest-not flag to select ChangeModtime
    #416, export ShakeValue from the main module only
    #352, improve the grammar in the profiling document
    #399, explain what in getDirectoryFiles is tracked
    #108, add getDirectoryFilesIO, an untracked version
    #401, document getDirectoryFiles exception behaviour
    #401, fix getDirectoryFiles error on pattern directory missing
    #400, detect indirect recursion in build rules
    #402, give better errors on recursive rules
    #369, clarify the docs for putQuiet/putLoud
    #405, make sure phony targets with \ work on Windows
    Require extra-1.4.3
    #398, only require old-time with GHC 7.4
    #239, make Rules an instance of MonadIO
    #384, add shakeExtra field to ShakeOptions for user data
    #374, make --debug=file write out newlines
    #308, make sure Shell and AutoDeps work together
    #365, fix unicode output with putNormal
    #269, add parallel execution via parallel/forP/par
    #310, preserve quoting around cmd
    #333, optimise the random pool, up to 20% faster