@@ -3,7 +3,7 @@
 module Development.Shake.Internal.FileInfo(
     FileInfo, fileInfoEq, fileInfoNeq,
     FileSize, ModTime, FileHash,
-    getFileHash, getFileInfo
+    getFileHash, getFileInfo, getFileInfoNoDirErr
     ) where
 
 import Control.Exception.Extra
@@ -83,10 +83,17 @@ result x y = do
 
 
 getFileInfo :: BSU -> IO (Maybe (ModTime, FileSize))
+getFileInfo = getFileInfoEx True
+
+getFileInfoNoDirErr :: BSU -> IO (Maybe (ModTime, FileSize))
+getFileInfoNoDirErr = getFileInfoEx False
+
+
+getFileInfoEx :: Bool -> BSU -> IO (Maybe (ModTime, FileSize))
 
 #if defined(PORTABLE)
 -- Portable fallback
-getFileInfo x = handleBool isDoesNotExistError (const $ return Nothing) $ do
+getFileInfoEx direrr x = handleBool isDoesNotExistError (const $ return Nothing) $ do
     let file = unpackU x
     time <- getModificationTime file
     size <- withFile file ReadMode hFileSize
@@ -102,14 +109,14 @@ instance ExtractFileTime UTCTime where extractFileTime = floor . fromRational . 
 
 #elif defined(mingw32_HOST_OS)
 -- Directly against the Win32 API, twice as fast as the portable version
-getFileInfo x = BS.useAsCString (unpackU_ x) $ \file ->
+getFileInfoEx direrr x = BS.useAsCString (unpackU_ x) $ \file ->
     alloca_WIN32_FILE_ATTRIBUTE_DATA $ \fad -> do
         res <- c_GetFileAttributesExA file 0 fad
         code <- peekFileAttributes fad
         let peek = do
                 code <- peekFileAttributes fad
                 if testBit code 4 then
-                    errorDirectoryNotFile $ unpackU x
+                    (if direrr then errorDirectoryNotFile $ unpackU x else return Nothing)
                  else
                     join $ liftM2 result (peekLastWriteTimeLow fad) (peekFileSizeLow fad)
         if res then
@@ -150,10 +157,10 @@ peekFileSizeLow p = peekByteOff p index_WIN32_FILE_ATTRIBUTE_DATA_nFileSizeLow
 
 #else
 -- Unix version
-getFileInfo x = handleBool isDoesNotExistError (const $ return Nothing) $ do
+getFileInfoEx direrr x = handleBool isDoesNotExistError (const $ return Nothing) $ do
     s <- getFileStatus $ unpackU_ x
     if isDirectory s then
-        errorDirectoryNotFile $ unpackU x
+        (if direrr then errorDirectoryNotFile $ unpackU x else return Nothing)
      else
         result (extractFileTime s) (fromIntegral $ fileSize s)
 
